Wed Nov 28 09:00:34 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/fiddle/fiddle.c: adding alignment constants for compatibility
	  with DL.
	* ext/fiddle/fiddle.h: ditto
	* ext/fiddle/lib/fiddle/cparser.rb: importing the C parser for DL
	  backwards compatibility.
	* ext/fiddle/lib/fiddle/import.rb: importing the import DSL for DL
	  backwards compatibility.
	* ext/fiddle/lib/fiddle/pack.rb: importing structure pack for DL
	  backwards compatibility.
	* ext/fiddle/lib/fiddle/value.rb: ditto
	* ext/fiddle/lib/fiddle/struct.rb: importing struct DSL for DL backwards
	  compatibility.
	* test/dl/test_c_struct_entry.rb: importing tests
	* test/dl/test_c_union_entity.rb: ditto
	* test/dl/test_cparser.rb: ditto
	* test/dl/test_import.rb: ditto
	* test/fiddle/test_c_struct_entry.rb: ditto
	* test/fiddle/test_c_union_entity.rb: ditto
	* test/fiddle/test_cparser.rb: ditto
	* test/fiddle/test_import.rb: ditto

Wed Nov 28 08:56:00 2012  Zachary Scott <zachary@zacharyscott.net>

	* doc/globals.rdoc: Add documentation file for magic globals
	[ruby-core:29048] [Bug #3022]

Wed Nov 28 08:55:00 2012  Zachary Scott <zachary@zacharyscott.net>

	* .document: Add README's to be included with docs

Wed Nov 28 08:26:00 2012  Zachary Scott <zachary@zacharyscott.net>

	* ext/dl/lib/dl.rb: Deprecation notice for DL

Wed Nov 28 08:25:00 2012  Zachary Scott <zachary@zacharyscott.net>

	* ext/fiddle/closure.c: Documentation for Fiddle
	* ext/fiddle/pointer.c: ditto
	* ext/fiddle/function.c: ditto
	* ext/fiddle/lib/fiddle.rb: ditto
	* ext/fiddle/fiddle.c: ditto
	* ext/fiddle/handle.c: ditto

Wed Nov 28 04:53:40 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/fiddle/handle.c: Make Fiddle independent of DL, copy DL::Handle
	  to Fiddle::Handle.
	* ext/fiddle/pointer.c: Make Fiddle independent of DL, copy
	  DL::Pointer to Fiddle::Pointer.
	* test/fiddle/test_func.rb: relevent tests
	* test/fiddle/test_handle.rb: ditto
	* test/fiddle/test_pointer.rb: ditto